--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Pagina home</h1>
+    <P>Vendas R$ 5000</P>
     <a href="teste2.html">Ir para a página de vendas</a>
 </body>
 </html>
